2007-02-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* configure.ac (ACLOCAL_FLAGS): Declare variable as precious
	using AC_ARG_VAR(), which also makes it a substituted variable.
	This should prevent inconsistent behavior if the variable changes
	in the environment after configure has run.
	(ACLOCAL_AMFLAGS): Remove substitution.
	* Makefile.am (ACLOCAL_AMFLAGS): Define variable.

2007-01-20  Daniel Elstner  <daniel.kitta@gmail.com>

	* INSTALL: Remove generic installation instructions from the
	repository, as this file is supplied by automake.

2007-01-17  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/stringutils.{cc,h} (Util::filename_short_display_name):
	Rename from Util::shorten_pathname().  Return the display name
	of the shortened filename encoded in UTF-8.
	(Util::expand_pathname): Remove as this function is no longer
	being used anywhere.
	* src/mainwindow.cc (MainWindow::set_title_filename): Use
	Util::filename_short_display_name().

2007-01-17  Daniel Elstner  <daniel.kitta@gmail.com>

	* Makefile.am (rxlocaledir): New variable that defines the locale
	directory the same way intltool does.
	(global_defs): Use $(rxlocaledir) instead of $(localedir).  In
	addition to being different from intltool's definition, standard
	$(localedir) also requires at least Autoconf 2.59c.

2007-01-16  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/statusline.cc (CounterBox::CounterBox): Change the shadow
	type to Gtk::SHADOW_ETCHED_IN.  Still looks somewhat ugly though;
	I need to think of something better.  Also enable the single line
	mode property of the numeric labels, in order to avoid resizing if
	the digits in the font have different height.
	(StatusLine::StatusLine): Increase HBox spacing to 3 pixels.

2007-01-16  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/filetree.cc (regexxer_create_file_tree): Prefix function
	signature with G_MODULE_EXPORT, as this will probably be required
	on Windows to enable dynamic loading.